Connected the UI to our AWS Cognito backend (AWS Amplify backend). Was successfully able to add a new user to the User Pool from the app / in the Android Studio EMU. Created "UserPool.kt" file for all backend functions. - Sprint 4

--- a/composeApp/src/androidMain/res/raw/amplifyconfiguration.json
+++ b/composeApp/src/androidMain/res/raw/amplifyconfiguration.json
@@ -2,9 +2,18 @@
   "auth": {
     "plugins": {
       "awsCognitoAuthPlugin": {
-        "UserPoolId": "us-east-2_6MemIsR9U",
-        "AppClientId": "3gk9nmr2kdh4tcinj0j3epqsa3",
-        "Region": "us-east-2"
+        "CognitoUserPool": {
+          "Default": {
+            "PoolId": "us-east-2_khCwbtoJf",
+            "AppClientId": "3eh791gmfrjdnogad5da3mport",
+            "Region": "us-east-2"
+          }
+        },
+        "Auth": {
+          "Default": {
+            "authenticationFlowType": "USER_SRP_AUTH"
+          }
+        }
       }
     }
   }
