--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,8 +18,6 @@ kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
 ktor = "3.0.1"
 logback = "1.5.8"
-ktor = "3.0.1"
-logback = "1.5.8"
 exposed = "0.53.0"
 mariadb= "3.5.0"
 
@@ -28,6 +26,7 @@ material3Android = "1.3.1"
 navigationRuntimeKtx = "2.8.3"
 navigationCompose = "2.8.3"
 composeUI = "1.7.5"
+squareSdkVersion = "2.0.0-beta5"
 
 
 [libraries]
@@ -63,6 +62,8 @@ exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "e
 exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed"}
 kotlinx-datetime = {module = "org.jetbrains.kotlinx:kotlinx-datetime-jvm", version.ref = "kotlinx-datetime"}
 mariadb-jdbc =  { module = "org.mariadb.jdbc:mariadb-java-client", version.ref = "mariadb" }
+mobile-payments-sdk = { module = "com.squareup.sdk:mobile-payments-sdk", version.ref = "squareSdkVersion" }
+mockreader-ui = { module = "com.squareup.sdk:mockreader-ui", version.ref = "squareSdkVersion" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
