Order UI and Location completed?
Will move on to API

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,8 +18,8 @@ kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
 ktor = "3.0.1"
 logback = "1.5.8"
-ktor = "3.0.1"
-logback = "1.5.8"
+#ktor = "3.0.1"
+#logback = "1.5.8"
 exposed = "0.53.0"
 mariadb= "3.5.0"
 
