--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 agp = "8.7.2"
 amplifyframeworkAwsAuthCognito = "2.16.0"
-android-compileSdk = "34"
+android-compileSdk = "35"
 android-minSdk = "25"
-android-targetSdk = "34"
+android-targetSdk = "35"
 androidx-activity-compose = "1.9.3"
 androidx-appcompat = "1.7.0"
 androidx-constraint-layout = "2.2.0"
@@ -17,7 +17,7 @@ authCognito = "2.0.0"
 authenticator = "1.2.0"
 compose-plugin = "1.6.11"
 amplify-core = "2.24.0"
-coil = "2.7.0"
+coil = "3.1.0"
 desugar_jdk_libs = "2.1.2"
 junit = "4.13.2"
 kotlin = "2.0.21"
@@ -35,14 +35,14 @@ mariadb= "3.5.0"
 composeMaterial = "1.4.0"
 material3Android = "1.3.1"
 navigationRuntimeKtx = "2.8.3"
-aws-kotlin = "1.3.31"
+aws-kotlin = "1.4.16"
 squareSdkVersion = "2.0.0-beta5"
 core-splashscreen = "1.0.1"
 
 legacySupportV4 = "1.0.0"
 cardview = "1.0.0"
 retrofit = "2.11.0"
-picasso = "2.8"
+connectivity = "1.2.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -81,12 +81,20 @@ androidx-legacy-support-v4 = { module = "androidx.legacy:legacy-support-v4", ver
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines"}
 
+
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit"}
 retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit"}
 
-coil = {module = "io.coil-kt:coil-compose", version.ref="coil"}
-ktor-client-android = { module= "io.ktor:ktor-client-android", version.ref = "ktor"}
+coil= {module = "io.coil-kt.coil3:coil", version.ref="coil"}
+coil-compose = {module = "io.coil-kt.coil3:coil-compose", version.ref = "coil"}
+coil-network = {module = "io.coil-kt.coil3:coil-network-ktor3", version.ref ="coil"}
+ktor-clinet-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor"}
+ktor-client-android = { module= "io.ktor:ktor-client-okhttp", version.ref = "ktor"}
 ktor-client-ios= { module= "io.ktor:ktor-client-darwin", version.ref = "ktor"}
+
+connectivity-core = { module = "dev.jordond.connectivity:connectivity-core", version.ref = "connectivity" }
+connectivity-device = { module = "dev.jordond.connectivity:connectivity-device", version.ref = "connectivity" }
+connectivity-compose-device = { module = "dev.jordond.connectivity:connectivity-compose-device", version.ref = "connectivity" }
 #server
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 
@@ -114,6 +122,7 @@ androidLibrary = { id = "com.android.library", version.ref = "agp" }
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
+kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
+ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
