--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,8 +41,7 @@ core-splashscreen = "1.0.1"
 
 legacySupportV4 = "1.0.0"
 cardview = "1.0.0"
-retrofit = "2.11.0"
-connectivity = "1.2.0"
+multiplatform-paths = "0.2.2"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -89,9 +88,7 @@ ktor-client-android = { module= "io.ktor:ktor-client-okhttp", version.ref = "kto
 ktor-client-ios= { module= "io.ktor:ktor-client-darwin", version.ref = "ktor"}
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor"}
 
-connectivity-core = { module = "dev.jordond.connectivity:connectivity-core", version.ref = "connectivity" }
-connectivity-device = { module = "dev.jordond.connectivity:connectivity-device", version.ref = "connectivity" }
-connectivity-compose-device = { module = "dev.jordond.connectivity:connectivity-compose-device", version.ref = "connectivity" }
+multiplatform-paths = { module = "me.sujanpoudel.multiplatform.utils:multiplatform-paths", version.ref = "multiplatform-paths"}
 #server
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 
