--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ kotlinx-datetime = "0.6.1"
 ktor = "3.0.1"
 logback = "1.5.8"
 ktor-tests = "2.3.9"
+mapsCompose = "2.3.0"
 navigation-compose = "2.8.3"
 exposed = "0.53.0"
 mariadb= "3.5.0"
@@ -36,6 +37,7 @@ composeMaterial = "1.4.0"
 material3Android = "1.3.1"
 navigationRuntimeKtx = "2.8.3"
 aws-kotlin = "1.4.16"
+playServicesMapsVersion = "18.0.0"
 squareSdkVersion = "2.0.0-beta5"
 core-splashscreen = "1.0.1"
 
@@ -43,6 +45,8 @@ legacySupportV4 = "1.0.0"
 cardview = "1.0.0"
 retrofit = "2.11.0"
 connectivity = "1.2.0"
+playServicesLocation = "21.3.0"
+playServicesMaps = "19.1.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -82,6 +86,8 @@ androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "card
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines"}
 
 
+maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
+play-services-maps-v1800 = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMapsVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit"}
 retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit"}
 
@@ -115,6 +121,8 @@ mariadb-jdbc =  { module = "org.mariadb.jdbc:mariadb-java-client", version.ref =
 mobile-payments-sdk = { module = "com.squareup.sdk:mobile-payments-sdk", version.ref = "squareSdkVersion" }
 mockreader-ui = { module = "com.squareup.sdk:mockreader-ui", version.ref = "squareSdkVersion" }
 core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
