--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistPermissions = "0.31.2-alpha"
 agp = "8.7.2"
 amplifyframeworkAwsAuthCognito = "2.16.0"
 android-compileSdk = "35"
@@ -26,8 +27,11 @@ kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
 ktor = "3.0.1"
+lifecycleRuntimeKtx = "2.8.7"
 logback = "1.5.8"
 ktor-tests = "2.3.9"
+mapsCompose = "2.11.4"
+material = "1.4.3"
 navigation-compose = "2.8.3"
 exposed = "0.53.0"
 mariadb= "3.5.0"
@@ -36,6 +40,8 @@ composeMaterial = "1.4.0"
 material3Android = "1.3.1"
 navigationRuntimeKtx = "2.8.3"
 aws-kotlin = "1.4.16"
+playServicesLocation = "21.3.0"
+playServicesMaps = "19.1.0"
 squareSdkVersion = "2.0.0-beta5"
 core-splashscreen = "1.0.1"
 
@@ -43,8 +49,15 @@ legacySupportV4 = "1.0.0"
 cardview = "1.0.0"
 retrofit = "2.11.0"
 connectivity = "1.2.0"
+ui = "1.4.3"
+uiToolingPreview = "1.4.3"
 
 [libraries]
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
+androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+androidx-material-v143 = { module = "androidx.compose.material:material", version.ref = "material" }
+androidx-ui-tooling-preview-v143 = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
+androidx-ui-v143 = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -82,6 +95,9 @@ androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "card
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines"}
 
 
+maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
+play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
+play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit"}
 retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit"}
 
