Added Cocoapods Dependency Manager for Xcode and iOS Development.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -124,5 +124,7 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
+
 
 ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
