Remove cocoapod, remove coil. it build on Xcode

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ authCognito = "2.0.0"
 authenticator = "1.2.0"
 compose-plugin = "1.6.11"
 amplify-core = "2.24.0"
-coil = "3.1.0"
+coil = "3.0.4"
 desugar_jdk_libs = "2.1.2"
 junit = "4.13.2"
 kotlin = "2.0.21"
@@ -92,9 +92,6 @@ ktor-clinet-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor"}
 ktor-client-android = { module= "io.ktor:ktor-client-okhttp", version.ref = "ktor"}
 ktor-client-ios= { module= "io.ktor:ktor-client-darwin", version.ref = "ktor"}
 
-connectivity-core = { module = "dev.jordond.connectivity:connectivity-core", version.ref = "connectivity" }
-connectivity-device = { module = "dev.jordond.connectivity:connectivity-device", version.ref = "connectivity" }
-connectivity-compose-device = { module = "dev.jordond.connectivity:connectivity-compose-device", version.ref = "connectivity" }
 #server
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 
@@ -124,7 +121,7 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
+# kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 
 
 ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
