--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,7 +31,8 @@ ktor-tests = "2.3.9"
 mapsCompose = "2.3.0"
 navigation-compose = "2.8.3"
 exposed = "0.53.0"
-mariadb= "3.5.0"
+mariadb = "3.5.0"
+jbcrypt =  "0.4"
 
 composeMaterial = "1.4.0"
 material3Android = "1.3.1"
@@ -45,7 +46,6 @@ legacySupportV4 = "1.0.0"
 cardview = "1.0.0"
 multiplatform-paths = "0.2.2"
 retrofit = "2.11.0"
-connectivity = "1.2.0"
 playServicesLocation = "21.3.0"
 playServicesMaps = "19.1.0"
 
@@ -86,7 +86,6 @@ androidx-legacy-support-v4 = { module = "androidx.legacy:legacy-support-v4", ver
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines"}
 
-
 maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
 play-services-maps-v1800 = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMapsVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit"}
@@ -120,6 +119,8 @@ exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "e
 exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed"}
 kotlinx-datetime = {module = "org.jetbrains.kotlinx:kotlinx-datetime-jvm", version.ref = "kotlinx-datetime"}
 mariadb-jdbc =  { module = "org.mariadb.jdbc:mariadb-java-client", version.ref = "mariadb" }
+jbcrypt = { module = "org.mindrot:jbcrypt", version.ref = "jbcrypt"}
+
 mobile-payments-sdk = { module = "com.squareup.sdk:mobile-payments-sdk", version.ref = "squareSdkVersion" }
 mockreader-ui = { module = "com.squareup.sdk:mockreader-ui", version.ref = "squareSdkVersion" }
 core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
