--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ navigation-compose = "2.8.3"
 exposed = "0.53.0"
 mariadb = "3.5.0"
 jbcrypt =  "0.4"
+acme4j = "3.5.1"
 
 composeMaterial = "1.4.0"
 material3Android = "1.3.1"
@@ -105,6 +106,7 @@ logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 
 ktor-server-core = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor" }
 ktor-server-auth = { module = "io.ktor:ktor-server-auth-jvm", version.ref = "ktor" }
+ktor-server-sessions = { module = "io.ktor:ktor-server-sessions-jvm", version.ref = "ktor" }
 ktor-server-host-common = { module = "io.ktor:ktor-server-host-common-jvm", version.ref = "ktor" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty-jvm", version.ref = "ktor" }
 ktor-server-tests = { module = "io.ktor:ktor-server-tests-jvm", version.ref = "ktor-tests" }
@@ -120,6 +122,7 @@ exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datet
 kotlinx-datetime = {module = "org.jetbrains.kotlinx:kotlinx-datetime-jvm", version.ref = "kotlinx-datetime"}
 mariadb-jdbc =  { module = "org.mariadb.jdbc:mariadb-java-client", version.ref = "mariadb" }
 jbcrypt = { module = "org.mindrot:jbcrypt", version.ref = "jbcrypt"}
+acme4j = { module = "org.shredzone.acme4j:acme4j-client", version.ref="acme4j"}
 
 mobile-payments-sdk = { module = "com.squareup.sdk:mobile-payments-sdk", version.ref = "squareSdkVersion" }
 mockreader-ui = { module = "com.squareup.sdk:mockreader-ui", version.ref = "squareSdkVersion" }
